ms_test_ia/deployment/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{service}#-gateway
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: #{container-port}#
        name: container-port
        protocol: #{container-protocol}#
      hosts:
        - #{gateway-host}#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: #{service}#-vs
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  hosts:
    - #{gateway-host}#
  gateways:
    - #{service}#-gateway
  http:
    - match:
        - uri:
            prefix: /#{project-name}#/#{service}#
      rewrite:
        uri: /#{service}#
      route:
        - destination:
            host: #{service}#
            port:
              number: #{container-port}#
          headers:
            response:
              add:
                x-content-type-options: nosniff
                x-frame-options: DENY
                strict-transport-security: max-age=31536000
                content-security-policy: frame-ancestors 'self'; referrer-policy 'origin'; upgrade-insecure-requests; default-src 'self';
